docker and docker-compose with node

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "docker, docker-compose with node",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/rodolfomedeiros/docker-hello#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10"
   }
 }
